# Atlas-SDK

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
atlas_protocol/: __init__.py  cognition.py  compat.py  enums.py  envelope.py  manifest.py  schemas.py  version.py
examples/: README.md
examples/hello_sensor/: manifest.json  wrapper.py
protocol/: LICENSE  NOTICE  README.md  pyproject.toml
protocol/atlas_protocol/: __init__.py  assets.py  conformance.py  goal.py  manifest.py  packaging.py  signing.py  transfer.py  trust.py
protocol/atlas_protocol/keys/first_party/: README.md
protocol/tests/: conftest.py  test_atlas_assets.py  test_atlas_conformance.py  test_atlas_format.py  test_atlas_protocol.py  test_atlas_signing.py
sdk/: NOTICE  README.md  pyproject.toml
sdk/atlas_sdk/: __init__.py  cli.py  format.py  manifest.py  templates.py
sdk/tests/: conftest.py  test_cli_e2e.py
