[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-protocol"
version = "0.1.0"
description = "Atlas Protocol (ALP) — the open contract for autonomous-lab software (capabilities, manifests, the verification-firewall envelope, goals, and cross-campaign transfer)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Aidan Yu" }]
keywords = ["atlas", "autonomous-lab", "self-driving-lab", "verification", "protocol", "scientific-discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2.7,<3"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/AidanSYu/Atlas-SDK"
Repository = "https://github.com/AidanSYu/Atlas-SDK"
Issues = "https://github.com/AidanSYu/Atlas-SDK/issues"

[tool.hatch.build.targets.wheel]
packages = ["atlas_protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
