[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-protocol"
version = "1.0.1"
description = "Atlas Protocol (ALP) — the open contract for autonomous-lab software: capability manifests, the actor-firewall envelope, goals, transfer, and the signed .atlas container format."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Contineon" }]
keywords = [
    "atlas",
    "autonomous-lab",
    "self-driving-lab",
    "verification",
    "protocol",
    "scientific-discovery",
    "signing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7,<3",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/AidanSYu/Atlas-SDK"
Repository = "https://github.com/AidanSYu/Atlas-SDK"
Issues = "https://github.com/AidanSYu/Atlas-SDK/issues"
Changelog = "https://github.com/AidanSYu/Atlas-SDK/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["atlas_protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
